Fixed spacing issue

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ table {
 }
 td.profile {
 	padding-left: 50px;
-	width: 850px;
+	width: 900px;
 }
 p {
 	display: inline;
